# Spritz

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  script.py  test.py
src/spritz/: __init__.py
src/spritz.egg-info/: PKG-INFO  SOURCES.txt
src/spritz/camera/: __init__.py  camera.py
src/spritz/colors/: __init__.py  color.py
src/spritz/lighting/: __init__.py  ambient.py  light.py  point.py
src/spritz/materials/: __init__.py  material.py
src/spritz/raytracing/: __init__.py  intersection.py  ray.py
src/spritz/scene/: __init__.py  scene.py
src/spritz/surfaces/: __init__.py  plane.py  sphere.py  surface.py  triangle.py
